--- a/MulLe/Base.lproj/Main.storyboard
+++ b/MulLe/Base.lproj/Main.storyboard
@@ -38,11 +38,11 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="724"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="DyK-Ph-yqi" customClass="CustomTableViewCell" customModule="MulLe" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="100"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="80" id="DyK-Ph-yqi" customClass="CustomTableViewCell" customModule="MulLe" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DyK-Ph-yqi" id="BBQ-R8-VJt">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zQa-6M-jGZ">
@@ -54,7 +54,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" id="Sux-Ie-ase">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" id="Sux-Ie-ase">
                                                             <rect key="frame" x="0.0" y="60" width="414" height="30"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <subviews>
@@ -65,35 +65,38 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGi-FY-8st">
-                                                                    <rect key="frame" x="27.5" y="0.0" width="82" height="30"/>
+                                                                    <rect key="frame" x="25.5" y="0.0" width="82" height="30"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HP0-Iw-Kyk">
-                                                                    <rect key="frame" x="119.5" y="0.0" width="52" height="30"/>
+                                                                    <rect key="frame" x="115.5" y="0.0" width="52" height="30"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTa-DQ-IBn">
-                                                                    <rect key="frame" x="181.5" y="0.0" width="80" height="30"/>
+                                                                    <rect key="frame" x="175.5" y="0.0" width="49" height="30"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="80" id="AFC-us-K0L"/>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="49" id="fPs-NS-cQN"/>
                                                                     </constraints>
                                                                     <state key="normal" title="Record"/>
                                                                     <connections>
                                                                         <action selector="reRecordAudio:" destination="DyK-Ph-yqi" eventType="touchUpInside" id="Y9T-1u-JnI"/>
                                                                     </connections>
                                                                 </button>
-                                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lo-A5-ltE">
-                                                                    <rect key="frame" x="271.5" y="0.0" width="102.5" height="30"/>
+                                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7lo-A5-ltE">
+                                                                    <rect key="frame" x="232.5" y="0.0" width="143.5" height="30"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="kZz-bR-UIc"/>
+                                                                    </constraints>
                                                                     <state key="normal" title="Delete"/>
                                                                     <connections>
                                                                         <action selector="deleteRecord:" destination="DyK-Ph-yqi" eventType="touchUpInside" id="yFW-zo-kEy"/>
                                                                     </connections>
                                                                 </button>
-                                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4st-A8-Y2C">
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4st-A8-Y2C">
                                                                     <rect key="frame" x="384" y="0.0" width="30" height="30"/>
                                                                     <state key="normal" title="Play"/>
                                                                     <connections>
@@ -102,9 +105,12 @@
                                                                 </button>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="trailing" secondItem="Sux-Ie-ase" secondAttribute="trailingMargin" constant="10" id="GTg-jC-Byp"/>
-                                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="leading" secondItem="Sux-Ie-ase" secondAttribute="leading" constant="10" id="HgM-jv-PBJ"/>
-                                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="trailing" secondItem="Sux-Ie-ase" secondAttribute="trailingMargin" constant="10" id="jo8-r5-WUl"/>
+                                                                <constraint firstItem="0al-DO-u2Y" firstAttribute="centerY" secondItem="Sux-Ie-ase" secondAttribute="centerY" id="8e7-Vm-aBf"/>
+                                                                <constraint firstItem="CGi-FY-8st" firstAttribute="centerY" secondItem="Sux-Ie-ase" secondAttribute="centerY" id="BQM-dx-XHa"/>
+                                                                <constraint firstItem="HP0-Iw-Kyk" firstAttribute="centerY" secondItem="Sux-Ie-ase" secondAttribute="centerY" id="HTQ-aN-BUW"/>
+                                                                <constraint firstItem="wTa-DQ-IBn" firstAttribute="centerY" secondItem="Sux-Ie-ase" secondAttribute="centerY" id="cdu-W2-Dln"/>
+                                                                <constraint firstItem="7lo-A5-ltE" firstAttribute="centerY" secondItem="Sux-Ie-ase" secondAttribute="centerY" id="gkX-6r-zFg"/>
+                                                                <constraint firstItem="4st-A8-Y2C" firstAttribute="centerY" secondItem="Sux-Ie-ase" secondAttribute="centerY" id="uSo-ol-8VA"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
@@ -115,7 +121,7 @@
                                             <outlet property="audioDuration" destination="HP0-Iw-Kyk" id="KgJ-8Y-u8E"/>
                                             <outlet property="playButton" destination="4st-A8-Y2C" id="fOA-Br-qC8"/>
                                             <outlet property="reRecordButton" destination="wTa-DQ-IBn" id="NFS-mR-6gm"/>
-                                            <outlet property="sequenceNo" destination="0al-DO-u2Y" id="06t-Fo-Nog"/>
+                                            <outlet property="sequenceNo" destination="0al-DO-u2Y" id="s3R-Ks-avd"/>
                                             <outlet property="textRecognized" destination="uVe-wT-QJv" id="Ikf-xf-iUx"/>
                                             <outlet property="timeRecorded" destination="CGi-FY-8st" id="ySg-c1-EDS"/>
                                         </connections>
